--- a/.inputrc
+++ b/.inputrc
@@ -1,10 +1,10 @@
-# Make Tab autocomplete regardless of filename case
+# Make Tab auto-complete regardless of filename case
 set completion-ignore-case on
 
 # List all matches in case multiple possible completions are possible
 set show-all-if-ambiguous on
 
-# Immediately add a trailing slash when autocompleting symlinks to directories
+# Immediately add a trailing slash when auto-completing symlinks to directories
 set mark-symlinked-directories on
 
 # Use the text that has already been typed as the prefix for searching through
@@ -12,10 +12,10 @@ set mark-symlinked-directories on
 "\e[B": history-search-forward
 "\e[A": history-search-backward
 
-# Do not autocomplete hidden files unless the pattern explicitly begins with a dot
+# Do not auto-complete hidden files unless the pattern explicitly begins with a dot
 set match-hidden-files off
 
-# Show all autocomplete results at once
+# Show all auto-complete results at once
 set page-completions off
 
 # If there are more than 200 possible completions for a word, ask to show them all
@@ -24,7 +24,7 @@ set completion-query-items 200
 # Show extra file information when completing, like `ls -F` does
 set visible-stats on
 
-# Be more intelligent when autocompleting by also looking at the text after
+# Be more intelligent when auto-completing by also looking at the text after
 # the cursor. For example, when the current line is "cd ~/src/mozil", and
 # the cursor is on the "z", pressing Tab will not autocomplete it to "cd
 # ~/src/mozillail", but to "cd ~/src/mozilla". (This is supported by the
